Added entity Framework and Created Database

--- a/HotelListing.API/appsettings.json
+++ b/HotelListing.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "HotelListingDbConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=HotelListingApiDb;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -18,10 +21,10 @@
       {
         "Name": "Seq",
         "Args": {
-          "serverUrl": "http://localhost:5159" 
+          "serverUrl": "http://localhost:5159"
         }
       }
-    ] 
+    ]
   },
   "AllowedHosts": "*"
 }
